# kanji-vocab-builder

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  PLAN.md  README.md  main.py  patch_legacy_cards.py  pyproject.toml  requirements.txt  sample-config.toml  test.html
docs/: ankiconnect.MD  project_plan.MD
jisho_anki_tool/: __init__.py  anki_connect.py  card_processor.py  cli.py  config.py  jisho.py  jisho_api.py  render.py  rendering.py  setup.py  utils.py
jisho_anki_tool/anki/: connect.py  schemas.py
kanji_vocab_miner/: card_processor.py  cli.py  config.py  jisho.py  render.py  setup.py  utils.py
kanji_vocab_miner/anki/: connect.py
tests/: __init__.py  jisho_words_schema.json  test_anki_connect.py  test_anki_integration.py  test_card_processor.py  test_config.py  test_jisho_api.py
