[project]
name = "kanji-vocab-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "click==8.1.7",
    "ipykernel>=6.29.5",
    "jsonschema>=4.23.0",
    "pydantic>=2.11.4",
    "pytest==7.4.0",
    "requests==2.31.0",
    "rich>=14.0.0",
    "tqdm>=4.67.1",
]

[project.scripts]
jisho-anki = "jisho_anki_tool.cli:jisho_anki"
